--- a/css/style.css
+++ b/css/style.css
@@ -100,3 +100,11 @@ a {
 a:hover {
     color: #1a6fd2;
 }
+.message-container {
+    border: 1px solid #ccc;
+    border-radius: 5px; /* Adjust the value to control the roundness of corners */
+    padding: 5px;
+    margin-bottom: 5px;
+    background-color: #f0f0f0; /* Add your preferred background color here */
+}
+
